--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 哑火
-SEOTitle: 哑火
+SEOTitle: 今天你摸了吗
 header-img: img/img108.png
 email: zhangxuanzby@163.com
 description: "ovo"
